--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "quasar": "^1.0.0",
